# dblsqd-sdk-qt

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  dblsqd-sdk-qt.pro  feed.cpp  release.cpp  release.h  update_dialog.cpp  update_dialog.h  update_dialog.ui
dblsqd/: feed.cpp  feed.h  release.cpp  release.h  semver.cpp  semver.h  update_dialog.cpp  update_dialog.h  update_dialog.ui
